[package]
name = "rusty-systems"
description = "A library for procedurally generating content using L-Systems"
version = "2.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://theriver.github.io/rusty-systems/"
repository = "https://github.com/TheRiver/rusty-systems/"
keywords = ["grammar", "l-systems", "procedural", "generation"]

exclude = ["docs", "11ty", ".*"]

[[bin]]
name = "lsystem"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
ansi_term = "0.12"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
tiny-skia = "0.11"
