[package]
name = "rusty-systems"
description = "A library for procedurally generating content using L-Systems"
version = "4.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://theriver.github.io/rusty-systems/"
repository = "https://github.com/TheRiver/rusty-systems/"
keywords = ["grammar", "l-systems", "procedural", "generation"]

exclude = ["docs", "11ty", ".*"]

[[bin]]
name = "lsystem"
required-features = ["lsystem"]

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
rand = "0.8"
ansi_term = { version = "0.12" , optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }

[dev-dependencies]
tiny-skia = "0.11"


[features]
lsystem = ["dep:clap", "dep:ansi_term"]